# zip_sim

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  jupyter_notebook_config.py  pyproject.toml
.devcontainer/: aliases  devcontainer.json  keybindings.json  setup.sh
.github/workflows/: python-app.yml
tests/titanic/: test_samples.py
titanic/: TitanicNotebook.ipynb  titanic_model.py
